# clipflow

./: .gitignore  AUTONOMOUS_DEPLOYMENT_ANALYSIS.md  DESIGN_SYSTEM_COMPLETION_REPORT.md  DESIGN_SYSTEM_FINAL_REPORT.md  DESIGN_SYSTEM_POLICY.md  PRODUCTION_READINESS.md  README.md  TASK_PERFORMANCE_REPORT.md  TASK_UNDO_REDO_REPORT.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.electron.json  vitest.config.ts
.github/workflows/: ci.yml  deploy.yml  gate.yml
coverage/: coverage-final.json  index.html  logger.ts.html  undo.ts.html  video.ts.html
playwright-report/: index.html
scripts/: create-issues.js
src/: App.tsx  index.css  main.tsx  preload.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: AudioWaveform.tsx  Button.tsx  Card.tsx  ErrorBoundary.tsx  ExportDialog.tsx  ExtractAudioDialog.tsx  FillerWordRemoval.tsx  ImportDialog.tsx  Input.tsx  OpenDialog.tsx  ProgressIndicators.tsx  SaveDialog.tsx  SettingsDialog.tsx  SilenceDetectionPanel.tsx  ThemeToggle.tsx  Timeline.tsx  TimelineReordering.tsx  TranscriptEditor.tsx  TranscriptionPanel.tsx  TrimDialog.tsx  VideoPreview.test.tsx  VideoPreview.tsx
src/lib/: business-rules.ts  design-tokens.ts  errors.ts  logger.ts  performance.ts  project-store.ts  project.ts  security.ts  status.ts  undo.test.ts  undo.ts  version.ts  video.test.ts  video.ts
src/main/: main.ts
src/services/: video-processing.ts  video-types.ts
src/types/: electron.d.ts
tests/e2e/: critical-flow.spec.ts  error-handling.spec.ts  export.spec.ts  (+8 more)
(+13 files in other folders)
